--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,15 +10,24 @@ environment:
   sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
-  crypto: ^3.0.1
-  dio: ^4.0.0
+#   crypto: ^3.0.1
+#   dio: ^4.0.0
+#   flutter:
+#     sdk: flutter
+#   json_serializable: ^4.1.4
+#   json_annotation: ^4.0.1
+#   path: ^1.8.0
+#   quiver: ^3.0.1
+#   sqflite: ^2.0.0+3
+ crypto: ^3.0.1
+  dio: ^5.0.0
   flutter:
     sdk: flutter
-  json_serializable: ^4.1.4
-  json_annotation: ^4.0.1
+  json_serializable: ^6.6.1
+  json_annotation: ^4.6.0
   path: ^1.8.0
   quiver: ^3.0.1
-  sqflite: ^2.0.0+3
+  sqflite: ^2.2.6
 
 dev_dependencies:
   build_runner: ^2.0.6
